tests/compile-fail/integration_suite__integration__mapfiles__intrinsic_name_xkcd_859.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: invalid intrinsic name: missing ')'
  ┌─ <mapfile>:3:3
  │
3 │ 4 CondJmp(>,int
  │   ^^^^^^^^^^^^^ missing ')'


